--- a/public/partials/timecard_summary.html
+++ b/public/partials/timecard_summary.html
@@ -6,7 +6,7 @@
             <td>{{consultant.id}}</td>
             <td>{{consultant.last_name}}</td>
             <td>{{consultant.first_name}}</td>
-            <td><a href="consultant/detail#?beeline_guid={{consultant.beeline_guid}}">{{consultant.beeline_guid}}</a></td>
+            <td><a href="#/detail/{{consultant.beeline_guid}}">{{consultant.beeline_guid}}</a></td>
             <td>{{consultant.first_billable_date}}</td>
             <td>{{consultant.rolloff_date}}</td>
             <td>{{consultant.total_hours_worked}}</td>
