Added Grade to consultant and the timecard detail screen.

--- a/public/partials/timecard_detail.html
+++ b/public/partials/timecard_detail.html
@@ -3,6 +3,7 @@
     <table>
         <tr align="right"><th>First Billable Date</th><td>{{consultant.first_billable_date}}</td></tr>
         <tr align="right"><th>Rolloff Date</th><td>{{consultant.rolloff_date}}</td></tr>
+        <tr align="right"><th>Grade</th><td>{{consultant.grade}}</td></tr>
     </table>
     <br/>
   <table>
