Added project and WBS numbers and Timecard State as well as a config page

--- a/public/partials/timecard_detail.html
+++ b/public/partials/timecard_detail.html
@@ -5,6 +5,7 @@
         <tr align="right"><th>Rolloff Date</th><td>{{consultant.rolloff_date}}</td></tr>
         <tr align="right"><th>Grade</th><td>{{consultant.grade}}</td></tr>
         <tr align="right"><th>Rate</th><td>{{rates[consultant.grade] | currency:"$"}}</td></tr>
+        <tr align="right"><th>Project</th><td>{{consultant.project}}</td></tr>
     </table>
     <br/>
   <table>
