--- a/public/partials/timecard_summary.html
+++ b/public/partials/timecard_summary.html
@@ -1,12 +1,13 @@
 <div>
     <h2>Timecard Summary</h2></p>
     <table>
-        <tr><th>ID</th><th>Last Name</th><th>First Name</th><th>Beeline GUID</th><th>First Billable Date</th><th>Rolloff Date</th><th>Total Hours Worked</th><th>Total Hours Submitted</th></tr>
+        <tr><th>ID</th><th>Last Name</th><th>First Name</th><th>Beeline GUID</th><th>Project</th><th>First Billable Date</th><th>Rolloff Date</th><th>Total Hours Worked</th><th>Total Hours Submitted</th></tr>
         <tr ng-repeat="consultant in consultants">
             <td>{{consultant.id}}</td>
             <td>{{consultant.last_name}}</td>
             <td>{{consultant.first_name}}</td>
             <td><a href="#/detail/{{consultant.beeline_guid}}">{{consultant.beeline_guid}}</a></td>
+            <td>{{consultant.project}}</td>
             <td>{{consultant.first_billable_date}}</td>
             <td>{{consultant.rolloff_date}}</td>
             <td>{{consultant.total_hours_worked}}</td>
