--- a/public/partials/timecard_summary.html
+++ b/public/partials/timecard_summary.html
@@ -1,7 +1,18 @@
 <div>
     <h2>Timecard Summary</h2></p>
     <table>
-        <tr><th>ID</th><th>Last Name</th><th>First Name</th><th>Beeline GUID</th><th>Project</th><th>First Billable Date</th><th>Rolloff Date</th><th>Total Hours Worked</th><th>Total Hours Submitted</th></tr>
+        <tr>
+            <th>ID</th>
+            <th>Last Name</th>
+            <th>First Name</th>
+            <th>Beeline GUID</th>
+            <th>Project</th>
+            <th>First Billable Date</th>
+            <th>Rolloff Date</th>
+            <th>Total Hours Worked</th>
+            <th>Total Hours Submitted</th>
+            <th>Unsubmitted Hours</th>
+        </tr>
         <tr ng-repeat="consultant in consultants">
             <td>{{consultant.id}}</td>
             <td>{{consultant.last_name}}</td>
@@ -12,6 +23,7 @@
             <td>{{consultant.rolloff_date}}</td>
             <td>{{consultant.total_hours_worked}}</td>
             <td>{{consultant.total_hours_submitted}}</td>
+            <td>{{consultant.total_hours_worked - consultant.total_hours_submitted}}</td>
         </tr>
     </table>
 </div>
