--- a/public/partials/timecard_monthly_report.html
+++ b/public/partials/timecard_monthly_report.html
@@ -1,14 +1,14 @@
 <div>
-    <h2>Monthly Report for {{report_month}}/{{report_year}}</h2>
+    <h1>Monthly Report for {{report_month}}/{{report_year}}</h1>
     <table>
-        <tr><th>Total Fees</th><td>{{total_fees | currency:$}}</td></tr>
-        <tr><th>Discounted Fees (9%)</th><td>{{total_fees_discounted | currency:$}}</td></tr>
-        <tr><th>Expenses (12% of Fees)</th><td>{{expenses | currency:$}}</td></tr>
+        <tr><th class="report_total">Total Fees</th><td>{{total_fees | currency:$}}</td></tr>
+        <tr><th class="report_total">Discounted Fees (9%)</th><td>{{total_fees_discounted | currency:$}}</td></tr>
+        <tr><th class="report_total">Expenses (12% of Fees)</th><td>{{expenses | currency:$}}</td></tr>
     </table>
     <table>
         <tr><th colspan="3"></th><th colspan="2" ng-repeat="end_date in end_dates_in_month">{{end_date}}</th><th colspan="2">Total</th><th colspan="2">Fees</th></tr>
         <tr><th ng-repeat="header in table_headers track by $index">{{header}}</th></tr>
-        <tr ng-repeat="line in table_lines track by $index">
+        <tr ng-class-even="'even'" ng-repeat="line in table_lines track by $index">
             <td ng-repeat="field in line track by $index">{{field}}</td>
         </tr>
     </table>
