Moved timecard submission into backend.  Works correctly now.  Needs more refactoring.  Add timecard broken.

--- a/public/css/timecards.css
+++ b/public/css/timecards.css
@@ -40,22 +40,22 @@ tr.even {
     background-color: #DDE0B6;
 }
 
-tr.FAILED {
+.FAILED {
     background-color: lightcoral;
 }
 
-tr.UNSUBMITTED {
+.UNSUBMITTED {
     background-color: whitesmoke;
 }
 
-tr.SUBMITTED {
+.SUBMITTED {
     background-color: lightgreen;
 }
 
-tr.SUBMITTING {
+.SUBMITTING {
     background-color: lightblue;
 }
 
-tr.SELECTED {
+.SELECTED {
     background-color: lightblue;
 }
